# ComfyUI-WhisperX

./: README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
web/js/: previewSRT.js  uploadAudio.js
whisperx/: asr.py
